[tool.poetry]
name = "baby-steps-of-rl"
version = "0.1.0"
description = ""
authors = ["snjot <snjot.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"
pytest = "^6.1.1"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
